Altered max width on quiz page div and fixed spacing

--- a/src/App.css
+++ b/src/App.css
@@ -11,8 +11,8 @@ body {
 }
 
 html, body, #root, main, main > div  {
-min-height: 100vh;
-height: auto;
+  min-height: 100vh;
+  height: auto;
 }
 
 h1 {
@@ -38,22 +38,27 @@ main {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 1em;
 }
 
 .intro-page > h1 {
   font-family: 'Karla', sans-serif;
   font-weight: 700;
   font-size: 40px;
+  
 }
 
 .difficulty {
   display: flex;
   flex-direction: column;
+  gap: 0.7em;
+  align-items: center;
 }
 
 .difficulty > h1 {
   font-size: 20px;
 }
+
 .difficulty label {
   display: block;
   border: 1px solid #4D5B9E;
@@ -63,7 +68,6 @@ main {
   padding: 4px;
   width: 8ch;
   font-size: 14px;
-  margin: 0 auto 0.7em auto;
 }
 
 .difficulty input:checked + label {
@@ -107,19 +111,19 @@ main {
   flex-direction: column;
   padding: 1em 0;
   justify-content: space-between;
-  gap: 1.5em;
   width: fit-content;
-  max-width: 90%;
+  max-width: min(90vw, 1000px);
   margin: 0 auto;
 }
 
 .quiz-page > div:first-of-type {
   display: flex;
+  flex-wrap: wrap;
+  column-gap: 1em;
+  row-gap: 0.3em;
   justify-content: space-between;
   align-items: center;
-  padding: 1em 0 1.5em 0;
-  /* reduce margin between timer and question container  */
-  margin-bottom: -1em;
+  padding: 1em 0 0.9em 0;
   border-bottom: 3px dotted #293264;
   color: #293264;
 }
@@ -127,7 +131,6 @@ main {
 .heading {
   margin-bottom: 0;
 }
-
 
 .timer {
   display: block;
@@ -148,14 +151,18 @@ main {
   color: white;
 }
 
+.questions-container {
+  margin-bottom: 1.5em;
+}
 .question {
-  padding: 1em 2em 1em 0 ;
+  padding: 1.2em 2em 1.2em 0 ;
   border-bottom: 2px dashed #DBDEF0;
   color: #293264;
 }
 
 .question > h1 {
   font-size: 16px;
+  margin-bottom: 0.8em;
 }
 
 .options-container {
@@ -210,5 +217,6 @@ input[type="radio"] {
 
 .score {
   text-align: center;
+  margin-bottom: 1em;
 }
 
